@@ -1,4 +1,4 @@
-2006 Q2 Dempsey (Xeon) (like Presler) Tulsa (?)
+2006 Q2 Dempsey (Xeon 5000) (like Presler) Tulsa (Xeon MP)
 2006 Q1 Yonah (mobile) Sossaman (low-power server)
         Yonah: U1300, U1400
 2006 Q3 Conroe: Merom (mobile) Santa Rosa (mobile) Woodcrest (low-power server)
@@ -11,6 +11,6 @@
 2007 Q2 Kentsfield (c=1) (related to Millville?)
 2007 Q2 Clovertown (multi-core)
 ?       Whitefield (c=4) Tigerton (server)
-?       Dunnington, 45nm
+?       Dunnington, 45nm (server)
 ?       Harpertown (related to Dunnington?)
 ?       Gainestown 
