@@ -1,7 +1,7 @@
 .\"
-.\" $Id: cpuid.man,v 20060207 2006/02/07 19:21:00 todd $
+.\" $Id: cpuid.man,v 20060208 2006/02/08 19:21:00 todd $
 .\"
-.TH CPUID 1 "7 Februrary 2006" "20060207"
+.TH CPUID 1 "8 Februrary 2006" "20060208"
 .SH NAME 
 cpuid \- Dump CPUID information for each CPU
 .SH SYNOPSIS
