@@ -26,4 +26,4 @@ rm -rf $RPM_BUILD_DIR/$RPM_PACKAGE_NAME-$RPM_PACKAGE_VERSION
 %files
 /usr/bin/cpuid
 /usr/share/man/man1/cpuid.1.gz
-%doc ChangeLog FUTURE
+%doc ChangeLog FUTURE LICENSE
